[metadata]
name = djcompiler
version = 0.0.2
url = https://github.com/abdoohossamm/djcompiler
author = Abdalrahman Hossam Eldin Mohamed
author_email = abdoohossamm@outlook.com
description = django compiler that compiles django project to a C language using Cython project which gives more performance and more security since the original code is hidden.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/abdoohossamm/djcompiler
    Tracker = https://github.com/abdoohossamm/djcompiler/issues

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = false
install_requires =
    Cython >= 0.29.33
exclude = tests,testproject

[options.packages.find]
where = djcompiler

[options.entry_points]
console_scripts =
    djcompiler = djcompiler.management:execute_from_command_line

[flake8]
exclude = build,.git,.tox,./tests,./testproject

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = djcompiler